@@ -91,6 +91,10 @@ CVS code -
   read_file()
 	- Remove apparently unneeded logic to handle a case where
 	  current is NULL, since it shouldn't be NULL there. (DLR)
+  get_next_filename()
+	- Store the value of digits(ULONG_MAX) in a static, since it
+	  doesn't change and hence doesn't need to be recalculated.
+	  (DLR)
 - nano.c:
   do_verbatim_input()
 	- Move to text.c, since it's an advanced text-based operation.
